aerc: Various changes.

--- a/aerc/aerc.conf
+++ b/aerc/aerc.conf
@@ -226,7 +226,7 @@ mouse-enabled=true
 # Template to use for Account tab titles
 #
 # Default: {{.Account}}
-#tab-title-account={{.Account}}
+tab-title-account=<{{.Account}}>
 
 #
 # Template to use for Composer tab titles
@@ -323,7 +323,7 @@ mouse-enabled=true
 # consecutive characters in the command or option.
 #
 # Default: false
-#fuzzy-complete=false
+fuzzy-complete=true
 
 # How long to wait after the last input before auto-completion is triggered.
 #
@@ -355,6 +355,12 @@ mouse-enabled=true
 #icon-signed-encrypted=✔
 #icon-unknown=✘
 #icon-invalid=⚠
+icon-new=✨
+icon-attachment=📎
+icon-old=🕰️
+icon-replied=↩️
+icon-flagged=🚩
+icon-deleted=🗑️
 
 # Reverses the order of the message list. By default, the message list is
 # ordered with the newest (highest UID) message on top. Reversing the order
@@ -811,6 +817,7 @@ text/html=! html
 #
 # Executed when a new email arrives in the selected folder
 #mail-received=notify-send "[$AERC_ACCOUNT/$AERC_FOLDER] New mail from $AERC_FROM_NAME" "$AERC_SUBJECT"
+mail-received=aerc :exec terminal-notifier -title "New mail from $AERC_FROM_NAME" -subtitle "[$AERC_ACCOUNT/$AERC_FOLDER]" -message "$AERC_SUBJECT"
 
 #
 # Executed when mail is deleted from a folder
@@ -823,6 +830,7 @@ text/html=! html
 #
 # Executed when aerc starts
 #aerc-startup=aerc :terminal calcurse && aerc :next-tab
+# aerc-startup=aerc :exec terminal-notifier -title "Aerc started"
 
 #
 # Executed when aerc shuts down.
