Aerc: Bat preview of text/*

--- a/aerc/aerc.conf
+++ b/aerc/aerc.conf
@@ -776,7 +776,7 @@ message/rfc822=colorize
 #text/html=pandoc -f html -t plain | colorize
 text/html=! html
 #text/html=! w3m -T text/html -I UTF-8
-#text/*=bat -fP --file-name="$AERC_FILENAME"
+text/*=bat -fP --file-name="$AERC_FILENAME"
 #application/x-sh=bat -fP -l sh
 #image/*=catimg -w $(tput cols) -
 #subject,~Git(hub|lab)=lolcat -f
@@ -809,6 +809,7 @@ text/html=! html
 # text/html=surf -dfgms
 # text/plain=gvim {} +125
 # message/rfc822=thunderbird
+application/pdf=sioyek {}
 
 [hooks]
 #
