--- a/aerc/aerc.conf
+++ b/aerc/aerc.conf
@@ -680,6 +680,7 @@ icon-deleted=🗑️
 #
 # This parameter can also be set per account in accounts.conf.
 #address-book-cmd=
+address-book-cmd=contacts --aerc %s
 
 # Specifies the command to be used to select attachments. Any occurrence of
 # '%s' in the file-picker-cmd will be replaced with the argument <arg>
