aerc: Added folder mapping

--- a/aerc/accounts.conf
+++ b/aerc/accounts.conf
@@ -14,8 +14,10 @@ from     = Jón Grétar Borgþórsson <jon.borgthorsson@gmail.com>
 source   = imaps://jon.borgthorsson%40gmail.com@imap.gmail.com
 outgoing = smtps://jon.borgthorsson%40gmail.com@smtp.gmail.com
 default       = INBOX
-folders-sort  = INBOX,[Gmail]/Sent Mail,[Gmail]/Spam,[Gmail]/All Mail
+folder-map    = folder_map/gmail.map
+folders-sort  = INBOX,G/All Mail,G/Sent Mail,G/Drafts,G/Spam,G/Bin,G/Starred,G/Important
 postpone      = [Gmail]/Drafts
 cache-headers = true
+use-gmail-ext = true
 source-cred-cmd = security find-generic-password -a "jon.borgthorsson%40gmail.com" -s aerc-gmail -w
 outgoing-cred-cmd = security find-generic-password -a "jon.borgthorsson%40gmail.com" -s aerc-gmail -w
