--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -57,6 +57,7 @@ prompt_color = "#00FF00"
 "aerc/aerc.conf" = { target = "~/Library/Preferences/aerc/aerc.conf", type = "symbolic" }
 "aerc/binds.conf" = { target = "~/Library/Preferences/aerc/binds.conf", type = "symbolic" }
 "aerc/accounts.conf" = { target = "~/Library/Preferences/aerc/accounts.conf", type = "symbolic" }
+"aerc/folder_map" = { target = "~/Library/Preferences/aerc/folder_map", type = "symbolic" }
 
 [fastfetch.files]
 "fastfetch/config.jsonc" = "~/.config/fastfetch/config.jsonc"
