--- a/zed/settings.json
+++ b/zed/settings.json
@@ -213,9 +213,7 @@
     "Markdown": {
       "show_edit_predictions": false
     },
-    "Elixir": {
-      "language_servers": ["elixir-ls", "tailwindcss-language-server"]
-    },
+    "Elixir": {},
     "Python": {
       "language_servers": ["pyright", "ty", "ruff"],
       // "language_servers": ["ty", "ruff"],
