--- a/sioyek/keys_user.config
+++ b/sioyek/keys_user.config
@@ -1,2 +1,9 @@
+new_window w
+open_document_embedded_from_current_path o
+open_last_document <C-o>
+
+enter_visual_mark_mode r
+
 goto_mark '
+
 copy y
