--- a/sioyek/prefs_user.config
+++ b/sioyek/prefs_user.config
@@ -1,1 +1,7 @@
-should_launch_new_window				1
+should_launch_new_window  0
+ruler_mode  0
+
+search_url_l	https://libgen.li/index.php?req=
+
+single_main_window_size    1024 874
+single_main_window_move     55 46
