Sioyek: Page seperation

--- a/sioyek/prefs_user.config
+++ b/sioyek/prefs_user.config
@@ -3,5 +3,7 @@ ruler_mode  0
 
 search_url_l	https://libgen.li/index.php?req=
 
+page_separator_width 5
+
 single_main_window_size    1024 874
 single_main_window_move     55 46
