--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -2,11 +2,11 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "iterm",
-    "width": 36,
+    "width": 40,
     "height": 14,
     "position": "left",
     "preserveAspectRatio": true,
-    "source": "~/.config/fastfetch/uh_for_under.png"
+    "source": "~/.config/fastfetch/montel-logo-clean.png",
   },
   "modules": [
     "title",
@@ -41,5 +41,5 @@
     // "locale",
     // "break",
     // "colors"
-  ]
+  ],
 }
