--- a/aerc/accounts.conf
+++ b/aerc/accounts.conf
@@ -9,6 +9,19 @@ cache-headers = true
 source-cred-cmd = security find-generic-password -a "j.borgthorsson%40icloud.com" -s aerc-icloud -w
 outgoing-cred-cmd = security find-generic-password -a "j.borgthorsson%40icloud.com" -s aerc-icloud -w
 
+[Montel]
+from     = Jón Grétar Borgþórsson <jon@montel.fi>
+source   = imaps://jon%40montel.fi@imap.gmail.com
+outgoing = smtps://jon%40montel.fi@smtp.gmail.com
+default       = INBOX
+folder-map    = folder_map/gmail.map
+folders-sort  = INBOX,G/All Mail,G/Sent Mail,G/Drafts,G/Spam,G/Bin,G/Starred,G/Important
+postpone      = [Gmail]/Drafts
+cache-headers = true
+use-gmail-ext = true
+source-cred-cmd = security find-generic-password -a "jon%40montel.fi" -s aerc-montel -w
+outgoing-cred-cmd = security find-generic-password -a "jon%40montel.fi" -s aerc-montel -w
+
 [GMail]
 from     = Jón Grétar Borgþórsson <jon.borgthorsson@gmail.com>
 source   = imaps://jon.borgthorsson%40gmail.com@imap.gmail.com
