--- a/jj/config.toml
+++ b/jj/config.toml
@@ -7,6 +7,9 @@ email = "jongretar@jongretar.com"
 [ui]
 default-command = "log"
 
+[aliases]
+push = ["util", "exec", "--", "uvx", "jj-pre-push", "push"]
+
 [revset-aliases]
 # set all remote bookmarks (commits pushed to remote branches) to be immutable
 'immutable_heads()' = "builtin_immutable_heads() | remote_bookmarks()"
