--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -49,6 +49,7 @@ prompt_color = "#00FF00"
 
 [jj.files]
 "jj/config.toml" = "~/.config/jj/config.toml"
+"jjui/config.toml" = "~/Library/Application Support/jjui/config.toml"
 
 [harlequin.files]
 "harlequin/harlequin.toml" = "~/Library/Application Support/harlequin/config.toml"
