--- a/jj/config.toml
+++ b/jj/config.toml
@@ -1,7 +1,7 @@
 "$schema" = "https://jj-vcs.github.io/jj/latest/config-schema.json"
 
 [user]
-name = "Jón Grétar"
+name = "Jón Grétar Borgþórsson"
 email = "jongretar@jongretar.com"
 
 [ui]
