--- a/jj/config.toml
+++ b/jj/config.toml
@@ -9,7 +9,17 @@ default-command = "log"
 
 [aliases]
 push = ["util", "exec", "--", "uvx", "jj-pre-push", "push"]
+tug = [
+    "bookmark",
+    "move",
+    "--from",
+    "closest_bookmark(@)",
+    "--to",
+    "closest_pushable(@)",
+]
 
 [revset-aliases]
 # set all remote bookmarks (commits pushed to remote branches) to be immutable
 'immutable_heads()' = "builtin_immutable_heads() | remote_bookmarks()"
+'closest_bookmark(to)' = 'heads(::to & bookmarks())'
+'closest_pushable(to)' = 'heads(::to & ~description(exact:"") & (~empty() | merges()))'
