--- a/jjui/config.toml
+++ b/jjui/config.toml
@@ -1,9 +1,15 @@
+[keys]
+leader = ["þ"]
+
+[leader.h]
+help = "Help"
+send = ["?"]
 
 [custom_commands]
-"new from main" = { key = ["n"], args = ["new", "main"] }
-"jj push" = { key = ["p"], args = ["push"] }
+"new from main" = { key = ["N"], args = ["new", "main"] }
+"jj push" = { key = ["z h"], args = ["push"] }
 "jj push closest bookmark(s) (allows new)" = { key = [
-    "P",
+    "z H",
 ], args = [
     "push",
     "-r",
@@ -23,13 +29,13 @@
 "show after revisions" = { key = ["H"], revset = "::$change_id" }
 
 [custom_commands."move commit down"]
-key = ["j"]
+key = ["J"]
 args = ["rebase", "-r", "$change_id", "--insert-before", "$change_id-"]
 
 [custom_commands."move commit up"]
-key = ["k"]
+key = ["K"]
 args = ["rebase", "-r", "$change_id", "--insert-after", "$change_id+"]
 
 [custom_commands."new note commit"]
-key = ["N"]
+key = ["z N"]
 args = ["new", "--no-edit", "-A", "$change_id"]
