--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -75,6 +75,10 @@ prompt_color = "#00FF00"
 [mise.files]
 "mise/config.toml" = "~/.config/mise/config.toml"
 
+[television.files]
+"television/config.toml" = "~/.config/television/config.toml"
+"television/cable" = "~/.config/television/cable/"
+
 [nushell.files]
 "nushell/config.nu" = "/Users/jongretar/Library/Application Support/nushell/config.nu"
 "nushell/env.nu" = "/Users/jongretar/Library/Application Support/nushell/env.nu"
