--- a/zed/tasks.json
+++ b/zed/tasks.json
@@ -45,23 +45,6 @@
     "shell": "system"
   },
   {
-    "label": "Posting",
-    "command": "posting",
-    "use_new_terminal": false,
-    "allow_concurrent_runs": false,
-    "reveal_target": "center",
-    "reveal": "always",
-    "hide": "on_success",
-    "shell": "system"
-  },
-  {
-    "label": "Aider (OpenAI: o3-mini)",
-    "command": "aider --watch-files --model o3-mini",
-    "reveal": "always",
-    "use_new_terminal": false,
-    "allow_concurrent_runs": false
-  },
-  {
     "label": "Preview in Skim",
     "command": "skim-preview '$ZED_FILE'",
     "reveal": "never",
@@ -77,7 +60,7 @@
   },
   {
     "label": "project_finder",
-    "command": "zed \"$(tv git-repos)\"",
+    "command": "zed \"$(tv git-projects)\"",
     "hide": "always",
     "reveal_target": "center",
     "allow_concurrent_runs": true,
