--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -77,7 +77,7 @@ prompt_color = "#00FF00"
 
 [television.files]
 "television/config.toml" = "~/.config/television/config.toml"
-"television/cable" = "~/.config/television/cable/"
+"television/cable" = { target = "~/.config/television/cable/", type = "symbolic" }
 
 [nushell.files]
 "nushell/config.nu" = "/Users/jongretar/Library/Application Support/nushell/config.nu"
