--- a/zed/settings.json
+++ b/zed/settings.json
@@ -204,15 +204,7 @@
     "Markdown": {
       "show_edit_predictions": false
     },
-    "Elixir": {
-      "language_servers": [
-        "expert",
-        "!elixir-ls",
-        "!next-ls",
-        "!lexical",
-        "..."
-      ]
-    },
+    "Elixir": {},
     "Python": {
       "language_servers": ["pyright", "ty", "ruff"],
       // "language_servers": ["ty", "ruff"],
