--- a/zed/settings.json
+++ b/zed/settings.json
@@ -227,6 +227,9 @@
       "format_on_save": "on",
       "tab_size": 2
     },
+    "Ruby": {
+      "language_servers": ["!solargraph", "ruby-lsp"]
+    },
     "Rust": {},
     "Zig": {},
     "Lua": {},
@@ -247,6 +250,18 @@
 
   // LSP Settings
   "lsp": {
+    "rubocop": {
+      "initialization_options": {}
+    },
+    "ruby-lsp": {
+      "initialization_options": {
+        "enabledFeatures": {
+          // "diagnostics": false,
+          // "linters": ["standard"],
+          // "formatter": "none"
+        }
+      }
+    },
     "ruff": {
       "initialization_options": {
         "settings": {
@@ -256,12 +271,6 @@
             "extendSelect": ["E", "F", "I"]
           }
         }
-      }
-    },
-    "ty": {
-      "binary": {
-        "path": "/Users/jongretar/.local/bin/ty",
-        "arguments": ["server"]
       }
     }
   }
