--- a/zed/settings.json
+++ b/zed/settings.json
@@ -10,9 +10,11 @@
   // Visual Settings
   "theme": "Catppuccin Mocha",
   "icon_theme": "Catppuccin Mocha",
-  "buffer_font_size": 14,
+  "buffer_font_size": 15,
   "ui_font_size": 16,
-  "buffer_font_family": "Monaspace Xenon",
+  "agent_ui_font_size": 16,
+  "agent_buffer_font_size": 14,
+  "buffer_font_family": "Monaspace Argon",
   "buffer_font_features": {
     "ss01": true,
     "ss02": true,
@@ -23,21 +25,21 @@
     "ss07": true,
     "ss08": true,
     "calt": true,
-    "dlig": true
+    "dlig": true,
   },
   "wrap_guides": [80, 120],
   "preferred_line_length": 120,
   "show_whitespaces": "trailing",
   "active_pane_modifiers": {
     "inactive_opacity": 0.6,
-    "border_size": 0.3
+    "border_size": 0.3,
   },
   "use_system_path_prompts": false,
   "use_system_prompts": false,
   "terminal": {
     "button": true,
     "toolbar": {
-      "breadcrumbs": false
+      "breadcrumbs": false,
     },
     "cursor_shape": "block",
     "font_family": "Monaspace Argon",
@@ -45,56 +47,57 @@
     "line_height": "standard",
     "env": {
       "EDITOR": "zed -w",
-      "VISUAL": "zed -w"
+      "VISUAL": "zed -w",
+      "GIT_EDITOR": "zed --wait",
     },
     "detect_venv": {
       "on": {
         "activate_script": "default",
-        "directories": [".venv", "venv"]
-      }
-    }
+        "directories": [".venv", "venv"],
+      },
+    },
   },
   "bottom_dock_layout": "left_aligned",
   "scrollbar": {
     "show": "auto",
     "axes": {
-      "horizontal": false
-    }
+      "horizontal": false,
+    },
   },
   "tabs": {
     "file_icons": false,
     "git_status": true,
     "show_close_button": "hover",
     "show_diagnostics": "errors",
-    "activate_on_close": "history"
+    "activate_on_close": "history",
   },
   "max_tabs": 8,
   "tab_bar": {
     "show": true,
     "show_tab_bar_buttons": true,
-    "show_nav_history_buttons": false
+    "show_nav_history_buttons": false,
   },
   "toolbar": {
     "quick_actions": false,
     "breadcrumbs": false,
     "agent_review": true,
     "code_actions": false,
-    "selections_menu": true
+    "selections_menu": true,
   },
   "title_bar": {
     "show_branch_name": true,
-    "show_branch_icon": false
+    "show_branch_icon": false,
   },
   "project_panel": {
     "auto_reveal_entries": false,
     "sticky_scroll": true,
-    "hide_root": true
+    "hide_root": true,
   },
   "notification_panel": {
-    "button": true
+    "button": true,
   },
   "collaboration_panel": {
-    "button": true
+    "button": true,
   },
   "diagnostics": {
     "inline": {
@@ -102,11 +105,11 @@
       "update_debounce_ms": 150,
       "padding": 2,
       "min_column": 80,
-      "max_severity": "error"
-    }
+      "max_severity": "error",
+    },
   },
   "search": {
-    "button": true
+    "button": true,
   },
   "minimap": { "show": "never" },
   "indent_guides": {
@@ -114,8 +117,9 @@
     "line_width": 2,
     "active_line_width": 4,
     "coloring": "fixed",
-    "background_coloring": "disabled"
+    "background_coloring": "disabled",
   },
+  "colorize_brackets": true,
   "experimental.theme_overrides": {
     // "editor.indent_guide_active": "#FF0000" // When using fixed
     // "editor.indent_guide": "#00FF00" // When using fixed
@@ -126,7 +130,7 @@
     "catppuccin": true,
     "catppuccin-icons": true,
     "just": true,
-    "rainbow-csv": true
+    "rainbow-csv": true,
   },
 
   // Vim mode setup
@@ -137,8 +141,8 @@
       "normal": "block",
       "insert": "bar",
       "replace": "underline",
-      "visual": "hollow"
-    }
+      "visual": "hollow",
+    },
   },
   "cursor_blink": false,
   "relative_line_numbers": "enabled",
@@ -148,7 +152,7 @@
   "command_aliases": {
     "W": "w",
     "Wq": "wq",
-    "Q": "q"
+    "Q": "q",
   },
 
   // Zed inner workings.
@@ -159,36 +163,42 @@
   "auto_indent_on_paste": true,
   "extend_comment_on_newline": false,
   "inlay_hints": {
-    "enabled": true
+    "enabled": true,
   },
 
   // AI
   "show_edit_predictions": true,
   "edit_predictions": {
     "mode": "subtle",
-    "enabled_in_text_threads": true
+    "enabled_in_text_threads": true,
   },
   "features": {
-    "edit_prediction_provider": "zed"
+    "edit_prediction_provider": "zed",
   },
   "agent": {
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-sonnet-4"
+      "model": "claude-sonnet-4",
     },
     "button": true,
     "always_allow_tool_actions": true,
     "default_profile": "write",
-    "play_sound_when_agent_done": true
+    "play_sound_when_agent_done": true,
   },
+
   "context_servers": {
+    "postgres-context-server": {
+      "enabled": true,
+      "settings": {
+        // "database_url": "postgresql://jongretar:jongretar@localhost:5432/database"
+      },
+    },
     "chrome-devtools": {
-      "source": "custom",
       "enabled": true,
       "command": "npx",
       "args": ["-y", "chrome-devtools-mcp@latest"],
-      "env": {}
-    }
+      "env": {},
+    },
   },
 
   // Git
@@ -199,14 +209,14 @@
       "show_commit_summary": true,
       "delay_ms": 500,
       "min_column": 80,
-      "padding": 2
-    }
+      "padding": 2,
+    },
   },
 
   "file_types": {
     "Dockerfile": ["Dockerfile", "Dockerfile.*"],
     "YAML": ["sls"],
-    "Markdown": ["qmd", "rmd", "md", "livemd"]
+    "Markdown": ["qmd", "rmd", "md", "livemd"],
   },
   "file_scan_exclusions": [
     "**/.git",
@@ -222,50 +232,52 @@
     "**/out",
     "**/.next",
     "**/_freeze",
-    "**/node_modules"
+    "**/node_modules",
   ],
   "journal": {
-    "hour_format": "hour24"
+    "hour_format": "hour24",
   },
+
+  "ssh_connections": [],
 
   // Language Specific Settings
   "languages": {
     "Markdown": {
       "show_edit_predictions": false,
       "soft_wrap": "preferred_line_length",
-      "preferred_line_length": 120
+      "preferred_line_length": 120,
     },
     "Elixir": {
-      "language_servers": ["expert", "!elixir-ls", "!next-ls", "!lexical", "..."]
+      "language_servers": ["expert", "!elixir-ls", "!next-ls", "!lexical", "..."],
     },
     "Python": {
       "code_actions_on_format": {
-        "source.organizeImports.ruff": true
+        "source.organizeImports.ruff": true,
       },
-      "language_servers": ["ty", "!basedpyright", "..."]
+      "language_servers": ["ty", "ruff", "!basedpyright", "!pyrefly", "!pyright", "!pylsp"],
     },
     "JSON": {
       "wrap_guides": [],
-      "use_autoclose": true
+      "use_autoclose": true,
     },
     "JSONC": {
       "wrap_guides": [],
-      "use_autoclose": true
+      "use_autoclose": true,
     },
     "R": {
       // "language_servers": ["air"],
       "format_on_save": "on",
-      "tab_size": 2
+      "tab_size": 2,
     },
     "Ruby": {
-      "language_servers": ["ruby-lsp", "!solargraph", "!rubocop", "..."]
+      "language_servers": ["ruby-lsp", "!solargraph", "!rubocop", "..."],
     },
     "Rust": {},
     "Zig": {},
     "Lua": {},
     "Typst": {
       "soft_wrap": "preferred_line_length",
-      "preferred_line_length": 80
+      "preferred_line_length": 80,
     },
     "TypeScript": {
       "tab_size": 4,
@@ -273,33 +285,33 @@
         "enabled": true,
         "show_parameter_hints": false,
         "show_type_hints": true,
-        "show_other_hints": true
-      }
-    }
+        "show_other_hints": true,
+      },
+    },
   },
 
   // LSP Settings
   "lsp": {
     "expert": {
       "binary": {
-        "arguments": ["--stdio"]
-      }
+        "arguments": ["--stdio"],
+      },
     },
     "tinymist": {
       "settings": {
-        "exportPdf": "onType",
-        "outputPath": "$root/target/$dir/$name"
+        // "exportPdf": "onSave",
+        "outputPath": "$root/target/$dir/$name",
       },
       "initialization_options": {
         "preview": {
           "background": {
-            "enabled": true
-          }
-        }
-      }
+            "enabled": true,
+          },
+        },
+      },
     },
     "rubocop": {
-      "initialization_options": {}
+      "initialization_options": {},
     },
     "ruby-lsp": {
       "initialization_options": {
@@ -307,9 +319,9 @@
           // "diagnostics": false,
           // "linters": ["standard"],
           // "formatter": "none"
-        }
-      }
-    }
+        },
+      },
+    },
     // "ruff": {
     //   "initialization_options": {
     //     "settings": {
@@ -321,5 +333,5 @@
     //     }
     //   }
     // }
-  }
+  },
 }
